--- a/exercises/exercises_1/products.html
+++ b/exercises/exercises_1/products.html
@@ -101,46 +101,45 @@
           fetchBlog();
         }, []);
 
-        if (!bloger.length)
-          return (
-            <div className="loading">
-              <svg
-                width="250"
-                height="250"
-                viewBox="0 0 50 50"
-                xmlns="http://www.w3.org/2000/svg">
-                <circle
-                  cx="25"
-                  cy="25"
-                  r="20"
-                  stroke="#646cff"
-                  strokeLinecap="round"
-                  strokeWidth="2"
-                  fill="none"
-                  strokeDasharray="31.4"
-                  strokeDashoffset="0">
-                  <animateTransform
-                    attributeName="transform"
-                    type="rotate"
-                    from="0 25 25"
-                    to="360 25 25"
-                    dur="1s"
-                    repeatCount="indefinite"
-                  />
-                </circle>
-                <text
-                  x="25"
-                  y="25"
-                  textAnchor="middle"
-                  dominantBaseline="middle"
-                  fontSize="6"
-                  fontWeight="700"
-                  fill="#646cff">
-                  Loading…
-                </text>
-              </svg>
-            </div>
-          );
+        const Loading = () => (
+          <div className="loading">
+            <svg
+              width="250"
+              height="250"
+              viewBox="0 0 50 50"
+              xmlns="http://www.w3.org/2000/svg">
+              <circle
+                cx="25"
+                cy="25"
+                r="20"
+                stroke="#646cff"
+                strokeLinecap="round"
+                strokeWidth="2"
+                fill="none"
+                strokeDasharray="31.4"
+                strokeDashoffset="0">
+                <animateTransform
+                  attributeName="transform"
+                  type="rotate"
+                  from="0 25 25"
+                  to="360 25 25"
+                  dur="1s"
+                  repeatCount="indefinite"
+                />
+              </circle>
+              <text
+                x="25"
+                y="25"
+                textAnchor="middle"
+                dominantBaseline="middle"
+                fontSize="6"
+                fontWeight="700"
+                fill="#646cff">
+                Loading…
+              </text>
+            </svg>
+          </div>
+        );
 
         const Product = ({ bloger }) =>
           bloger.map((blog) => {
@@ -233,14 +232,20 @@
         return (
           <div className="container">
             <Header />
+
             <div className="exercise-content">
               <h2>Bài tập 1.4: Product List</h2>
               <div className="answer-content">
                 <div className="blog-list">
-                  {bloger.length !== 0 && <Product bloger={bloger} />}
+                  {bloger.length !== 0 ? (
+                    <Product bloger={bloger} />
+                  ) : (
+                    <Loading />
+                  )}
                 </div>
               </div>
             </div>
+
             {blogDetails.length !== 0 && (
               <>
                 <div class="details-overlay" onClick={handleCloseDetails}></div>
