--- a/exercises/exercises_1/profile.html
+++ b/exercises/exercises_1/profile.html
@@ -81,46 +81,45 @@
             });
         }, []);
 
-        if (!artist.avatar_url)
-          return (
-            <div className="loading">
-              <svg
-                width="250"
-                height="250"
-                viewBox="0 0 50 50"
-                xmlns="http://www.w3.org/2000/svg">
-                <circle
-                  cx="25"
-                  cy="25"
-                  r="20"
-                  stroke="#646cff"
-                  strokeLinecap="round"
-                  strokeWidth="4"
-                  fill="none"
-                  strokeDasharray="31.4"
-                  strokeDashoffset="0">
-                  <animateTransform
-                    attributeName="transform"
-                    type="rotate"
-                    from="0 25 25"
-                    to="360 25 25"
-                    dur="1s"
-                    repeatCount="indefinite"
-                  />
-                </circle>
-                <text
-                  x="25"
-                  y="25"
-                  textAnchor="middle"
-                  dominantBaseline="middle"
-                  fontSize="6"
-                  fontWeight="700"
-                  fill="#646cff">
-                  Loading…
-                </text>
-              </svg>
-            </div>
-          );
+        const Loading = () => (
+          <div className="loading">
+            <svg
+              width="250"
+              height="250"
+              viewBox="0 0 50 50"
+              xmlns="http://www.w3.org/2000/svg">
+              <circle
+                cx="25"
+                cy="25"
+                r="20"
+                stroke="#646cff"
+                strokeLinecap="round"
+                strokeWidth="2"
+                fill="none"
+                strokeDasharray="31.4"
+                strokeDashoffset="0">
+                <animateTransform
+                  attributeName="transform"
+                  type="rotate"
+                  from="0 25 25"
+                  to="360 25 25"
+                  dur="1s"
+                  repeatCount="indefinite"
+                />
+              </circle>
+              <text
+                x="25"
+                y="25"
+                textAnchor="middle"
+                dominantBaseline="middle"
+                fontSize="6"
+                fontWeight="700"
+                fill="#646cff">
+                Loading…
+              </text>
+            </svg>
+          </div>
+        );
 
         return (
           <div className="container">
@@ -128,35 +127,39 @@
             <div className="exercise-content">
               <h2>Bài tập 1.3: Profile Card</h2>
               <div className="answer-content">
-                <div className="profile-card">
-                  <img src={artist.avatar_url} alt="Profile Picture" />
-                  <h3>
-                    <strong>{artist.name.title}: </strong>
-                    {artist.name.last} {artist.name.first}
-                  </h3>
-                  <div className="username">{artist.username}</div>
-                  <div className="info">
-                    <p>
-                      <strong>Email:</strong>
-                      <a href="mailto:contact@fullstack.edu.vn">
-                        {artist.email}
-                      </a>
-                    </p>
-                    <p>
-                      <strong>Phone:</strong> {artist.phone}
-                    </p>
-                    <p>
-                      <strong>Website:</strong>
-                      <a href={artist.website} target="_blank">
-                        {artist.website}
-                      </a>
-                    </p>
-                    <p>
-                      <strong>Address:</strong>
-                      {artist.address}
-                    </p>
+                {!artist.avatar_url ? (
+                  <Loading />
+                ) : (
+                  <div className="profile-card">
+                    <img src={artist.avatar_url} alt="Profile Picture" />
+                    <h3>
+                      <strong>{artist.name.title}: </strong>
+                      {artist.name.last} {artist.name.first}
+                    </h3>
+                    <div className="username">{artist.username}</div>
+                    <div className="info">
+                      <p>
+                        <strong>Email:</strong>
+                        <a href="mailto:contact@fullstack.edu.vn">
+                          {artist.email}
+                        </a>
+                      </p>
+                      <p>
+                        <strong>Phone:</strong> {artist.phone}
+                      </p>
+                      <p>
+                        <strong>Website:</strong>
+                        <a href={artist.website} target="_blank">
+                          {artist.website}
+                        </a>
+                      </p>
+                      <p>
+                        <strong>Address:</strong>
+                        {artist.address}
+                      </p>
+                    </div>
                   </div>
-                </div>
+                )}
               </div>
             </div>
           </div>
