--- a/public/exercises/exercises_1/counter.html
+++ b/public/exercises/exercises_1/counter.html
@@ -86,33 +86,40 @@
         return (
           <div className="container">
             <Header />
-            <h2 className="exercise_1">Bài tập 1.1: Counter App</h2>
-            <div className="calculator">
-              <p
-                className="result"
-                style={{
-                  color: count > 0 ? "green" : count < 0 ? "red" : "#17171a",
-                }}>{`${count > 0 ? `+${count}` : count}`}</p>
-              <button className="calc-btn" id="increase" onClick={calculate}>
-                Increase
-              </button>
-              <button className="calc-btn" id="decrease" onClick={calculate}>
-                Decrease
-              </button>
-              <button className="calc-btn" id="reset" onClick={calculate}>
-                Reset
-              </button>
-              <div className="electrode">
-                {count > 0 && (
-                  <span className={`anode${pressed ? " pressed" : ""}`}>
-                    Dương
-                  </span>
-                )}
-                {count < 0 && (
-                  <span className={`cathode${pressed ? " pressed" : ""}`}>
-                    Âm
-                  </span>
-                )}
+            <div className="exercise-content">
+              <h2 className="exercise_1">Bài tập 1.1: Counter App</h2>
+              <a
+                href="https://github.com/xuanphao19/ReactJS-Practice-F88/blob/main/public/exercises/exercises_1/counter.html"
+                className="repositories">
+                Repositories GitHub
+              </a>
+              <div className="calculator">
+                <p
+                  className="result"
+                  style={{
+                    color: count > 0 ? "green" : count < 0 ? "red" : "#17171a",
+                  }}>{`${count > 0 ? `+${count}` : count}`}</p>
+                <button className="calc-btn" id="increase" onClick={calculate}>
+                  Increase
+                </button>
+                <button className="calc-btn" id="decrease" onClick={calculate}>
+                  Decrease
+                </button>
+                <button className="calc-btn" id="reset" onClick={calculate}>
+                  Reset
+                </button>
+                <div className="electrode">
+                  {count > 0 && (
+                    <span className={`anode${pressed ? " pressed" : ""}`}>
+                      Dương
+                    </span>
+                  )}
+                  {count < 0 && (
+                    <span className={`cathode${pressed ? " pressed" : ""}`}>
+                      Âm
+                    </span>
+                  )}
+                </div>
               </div>
             </div>
           </div>
