--- a/exercises/exercises_1/weather.html
+++ b/exercises/exercises_1/weather.html
@@ -303,6 +303,12 @@
             <div className="exercise-content">
               <h2>Bài tập 6: Weather App</h2>
 
+              <a
+                href="https://github.com/xuanphao19/ReactJS-Practice-F88/blob/main/public/exercises/exercises_1/weather.html"
+                className="repositories">
+                Repositories GitHub
+              </a>
+
               <div className="answer-content weather-city">
                 {error && (
                   <p className="error">
