--- a/exercises/exercises_1/products.html
+++ b/exercises/exercises_1/products.html
@@ -235,6 +235,11 @@
 
             <div className="exercise-content">
               <h2>Bài tập 1.4: Product List</h2>
+              <a
+                href="https://github.com/xuanphao19/ReactJS-Practice-F88/blob/main/public/exercises/exercises_1/products.html"
+                className="repositories">
+                Repositories GitHub
+              </a>
               <div className="answer-content">
                 <div className="blog-list">
                   {bloger.length !== 0 ? (
