--- a/exercises/exercises_1/profile.html
+++ b/exercises/exercises_1/profile.html
@@ -126,6 +126,11 @@
             <Header />
             <div className="exercise-content">
               <h2>Bài tập 1.3: Profile Card</h2>
+              <a
+                href="https://github.com/xuanphao19/ReactJS-Practice-F88/blob/main/public/exercises/exercises_1/profile.html"
+                className="repositories">
+                Repositories GitHub
+              </a>
               <div className="answer-content">
                 {!artist.avatar_url ? (
                   <Loading />
