--- a/exercises/exercises_1/products.html
+++ b/exercises/exercises_1/products.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/ReactJS-Practice-F88/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bài tập 1.4: Product List</title>
     <!-- React & ReactDOM từ CDN -->
@@ -26,16 +29,20 @@
       const Header = () => {
         const ToggleTheme = () => {
           const [theme, setTheme] = useState(() => {
-            return localStorage.getItem("theme");
+            const localTheme = localStorage.getItem("theme");
+            return !localTheme ? "dark" : localTheme;
           });
+
           useEffect(() => {
-            document.documentElement.classList.toggle("dark", theme === "dark");
-            localStorage.setItem("theme", theme);
+            document.documentElement.className = theme;
           }, [theme]);
 
           const toggle = () => {
-            setTheme(theme === "dark" ? "" : "dark");
+            const newTheme = theme === "dark" ? "light" : "dark";
+            localStorage.setItem("theme", newTheme);
+            setTheme(newTheme);
           };
+
           return (
             <button className="toggle-theme" onClick={toggle}>
               {theme === "dark" ? "🌙" : "☀️"}
