--- a/exercises/exercises_1/comments.html
+++ b/exercises/exercises_1/comments.html
@@ -7,7 +7,7 @@
       type="image/svg+xml"
       href="/ReactJS-Practice-F88/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bài tập 5: Comment System</title>
+    <title>Homework 5: Comment System</title>
     <!-- React & ReactDOM từ CDN -->
     <script
       src="https://unpkg.com/react@18/umd/react.development.js"
