--- a/exercises/exercises_1/weather.html
+++ b/exercises/exercises_1/weather.html
@@ -61,7 +61,7 @@
           <header id="header">
             <div className="header">
               <h1 className="slogan">Conquer ReactJS with F8 🚀 </h1>
-              <a className="gotoback" href="/">
+              <a className="gotoback" href="./">
                 Home
               </a>
               <ToggleTheme />
