--- a/exercises/exercises_1/comments.html
+++ b/exercises/exercises_1/comments.html
@@ -28,7 +28,7 @@
       const isProduction =
         window.location.hostname !== "localhost" &&
         window.location.hostname !== "127.0.0.1";
-      const path = isProduction ? "/ReactJS-Practice-F88" : "/";
+      const path = isProduction ? "/ReactJS-Practice-F88/index.html" : "/";
 
       const BackToTop = () => {
         const [isVisible, setIsVisible] = useState(false);
