--- a/exercises/exercises_1/products.html
+++ b/exercises/exercises_1/products.html
@@ -33,7 +33,7 @@
           const isProduct =
             window.location.hostname !== "localhost" &&
             window.location.hostname !== "127.0.0.1";
-          setPath(isProduct ? "/ReactJS-Practice-F88" : "/");
+          setPath(isProduct ? "/ReactJS-Practice-F88/index.html" : "/");
         }, []);
 
         const ToggleTheme = () => {
