--- a/exercises/exercises_1/counter.html
+++ b/exercises/exercises_1/counter.html
@@ -35,7 +35,7 @@
           const isProduct =
             window.location.hostname !== "localhost" &&
             window.location.hostname !== "127.0.0.1";
-          setPath(isProduct ? "/ReactJS-Practice-F88" : "/");
+          setPath(isProduct ? "/ReactJS-Practice-F88/index.html" : "/");
         }, []);
 
         const calculate = (event) => {
